--- a/09-05.Januar/content/diskussion.tex
+++ b/09-05.Januar/content/diskussion.tex
@@ -1,2 +1,3 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Alle experimentell ermittelten Messwerte liegen in etwa im Toleranzbereich der Messgrößen, bis auf die Güte.
