--- a/09-05.Januar/main.tex
+++ b/09-05.Januar/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{Versuch: 354}
+\title{gedämpfte und erzwungene Schwingungen}
 \date{
-  Durchführung: DATUM
+  Durchführung: 05.01.2016
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 12.01.2016
 }
 
 \begin{document}
