--- a/10-12.Januar/main.tex
+++ b/10-12.Januar/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{351}
+\title{Fourier-Analyse und Synthese}
 \date{
-  Durchführung: DATUM
+  Durchführung: 12.01.2016
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 19.01.2016
 }
 
 \begin{document}
