--- a/10-12.Januar/content/theorie.tex
+++ b/10-12.Januar/content/theorie.tex
@@ -33,7 +33,7 @@ berechnen. Dabei treten nur vielfache der $\nu_1$ Grundfrequenz auf, welche als 
   \includegraphics[height=4cm]{picture/Frequenzspektrum.png}
   \caption{Frequenzspektrum einer periodischen Schwingung}
   \label{fig:fre}
-\end{figure}                    %\to geht auch anstatt \rightarrow, sieht sogar gleich aus :)
+\end{figure}
 bei welchen die Amplituden für $n \rightarrow \infty$ gegen null gehen sollte, wie man Abbildung \ref{fig:fre} entnehmen kann. Falls es sich bei der fourieranalysierten Funktion nicht um eine Periodische Funktion handeln sollte, ergibt sich dort ein kontinuierliches Spektrum.
 Mit Hilfe der Fourier-Transformation ist es möglich das Frequenzspektrum sowohl periodischer als auch nicht-periodischer Funktion zu bestimmen.
 \begin{equation}
