--- a/08-15.Dezember/content/auswertung.tex
+++ b/08-15.Dezember/content/auswertung.tex
@@ -1,7 +1,7 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
-\subsection{Wheatston'sche Brückeschaltung}
+\subsection{Wheatston'sche Brückenschaltung}
 Mit Hilfe der Wheatston'schen Brückenschaltung werden zwei unbekannte Widerstände $R_{13}$ = Wert13 und $R_{14}$ = Wert14 bestimmt. Dies geschieht mit Formel \ref{eqn:R_x}, die Werte und Ergebnisse sind in den Tabellen \ref{tab:Wheat1} und \ref{tab:Wheat2} aufgeführt. $\overline{R_\text{13,14}}$ entspricht hierbei den gemittelten Werten für die gesuchten Widerstände. Der Wert $R_2$ hat eine Toleranz von 0.2\% und $\frac{R_3}{R_4}$ hat eine Toleranz von 0.5\%.
 
 \begin{table}[H] %R13
