--- a/08-15.Dezember/content/durchfuehrung.tex
+++ b/08-15.Dezember/content/durchfuehrung.tex
@@ -1,7 +1,7 @@
 \section{Durchführung und Aufbau}
 \label{sec:Durchführung}
 
-\subsection{Wheatstone Brücke}
+\subsection{Wheatston'sche Brückenschaltung}
 Zwei verschiedene unbekannte Widerstände sollen durch die Brückenschaltung vermessen werden. Dafür wird die Schaltung wie in Abbildung \ref{fig:wheatstone} aufgebaut. Anschließend wird das Potentiometer so lange varriert, bis die Brückenspannung minimal wird/verschwindet. Dies wird für drei verschieden Widerstände $R_2$ wiederholt.
 
 \subsection{Kapazitätsmessbrücke}
@@ -12,7 +12,7 @@ Es soll die Kapazität eines Kondensators ausgemessen werden. Dafür wird die Sc
 Ziel ist es eine RC-Kombination auszumessen. Dazu wird in die Schaltung der Abbildung entsprechend der Widerstand $R_2$ ergänzt. Die Messung wird mit 2 verschiedenen Kondensatoren $C_2$ wiederholt. Das Potentiometer wird erneut so eingestellt, dass die Brückenspannung minimal wird und die Werte $C_2, R_2, R_3$, sowie $R_4$ werden notiert.
 
 \subsection{Induktivitätsmessbrücke}
-Um die Induktivität und den fiktiven Widerstand der Schaltung zu vermesen, wir die Schaltung wie in Abbildung \ref{fig:L} aufgebaut. Die Messung wird mit 2 verschiedenen Spulen $L_2$ wiederholt. Das Potentiometer wird erneut so eingestellt das die Brückenspannung minimal wird und die werte $L_2, R_2, R_3$, sowie $R_4$ notiert.
+Um die Induktivität und den fiktiven Widerstand der Schaltung zu vermessen, wird die Schaltung wie in Abbildung \ref{fig:L} aufgebaut. Die Messung wird mit 2 verschiedenen Spulen $L_2$ wiederholt. Das Potentiometer wird erneut so eingestellt das die Brückenspannung minimal wird und die werte $L_2, R_2, R_3$, sowie $R_4$ notiert.
 
 \subsection{Maxwell Brücke}
 Die Schaltung ist wie in Abbildung \ref{fig:Max-Br} zu sehen ist aufgebaut. Dabei werden die Widerstände $R_3$ sowie $R_4$ nicht mehr als Potentiometer, sondern jeweils als regelbarer Widerstand benutzt. Bei der Brückenspannung wird durch abwechselndes justieren der beiden Widerstände das Minimum der Brückensapnnung gesucht. Die Werte $R_2, R_3, R_4$ und $C_4$ werde notiert und die Messung ein zweites mal für einen anderen Widerstand $R_2$ durchgeführt.
