--- a/10-12.Januar/content/theorie.tex
+++ b/10-12.Januar/content/theorie.tex
@@ -12,8 +12,8 @@ als auch periodisch in der Zeit
 \end{equation}
 zu wiederholen. Dabei ist $T$ die Periodendauer und $D$ die Distanz nach dem sich ein Vorgang wiederholt. Solche Vorgänge lassen sich mittels der $2 \pi$ periodoschen Funktionen Sinus und Cosinus beschreiben, welche die Form
 \begin{eqnarray}
-  f(t) = a sin \left( \frac{2 \pi}{T} t \right) \ ,	\\
-  f(t) = a cos \left( \frac{2 \pi}{T} t \right)
+  f(t) & = a sin \left( \frac{2 \pi}{T} t \right) \ ,	\\
+  f(t) & = a cos \left( \frac{2 \pi}{T} t \right)
   \label{eqn:sin}
 \end{eqnarray}
 haben. Mittels des Fourierschen Theorem lassen sich sämtliche periodische Vorgänge in der Natur, mit Hilfe der beiden Funktionen beschreiben.
