--- a/09-05.Januar/content/diskussion.tex
+++ b/09-05.Januar/content/diskussion.tex
@@ -1,3 +1,3 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Alle experimentell ermittelten Messwerte liegen in etwa im Toleranzbereich der Messgrößen, bis auf die Güte.
+Alle experimentell ermittelten Messwerte liegen in etwa im Toleranzbereich der Messgrößen, bis auf die Güte. Es scheint so, als ob ein systematischer Fehler vorliegt. Ausschließlich bei f $\rightarrow \infty $ und f $\rightarrow 0$ wird der Erwatungswert erfüllt.
