--- a/11-19.Januar/content/auswertung.tex
+++ b/11-19.Januar/content/auswertung.tex
@@ -1,3 +1,104 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+Das Experiment wurde mit der zweiten Schaltung durchgeführt. Die Schaltung hatt die Kenngrößen 
+\begin{eqnarray}
+  L =& (\num{23.954 +- 0.001}) mH	\\
+  C =& (\num{0.7932 +- 0.0001}) nF	\\
+  C_\text{Sp} =& (\num{0.028 +- 0.001})	\\
+  R =& 48 \text{\Omega}
+\end{eqnarray}
+Als Koppelkondensator wurde ein variabeler Kondensator benutzt der einen relativen Messfehler von 0.5 \% besitzt und Kapazitäten von 12.00 nF, 9.99 nF, 8.18 nF, 6.86 nF, 4.74 nF, 2.86 nF, 2.19 nF und 0.997 nF.
+
+\subsection{Justierung der beiden LC-Kreise}
+Um die beiden Resanzfrequenzen miteinander abzustimmen, wird zunächst die Resonanzfrequenz $\nu^+$ des Kreises mit der nicht Regelbaren Kapazität mittels Lissajou-Figur bestimmt. Dafür wird die Phase gesucht, welche zwischen Generstorspannung und Schwingkreis verschwindet. Es wird nun der Funktionsgenerator an den zweiten Kreis angeschlossen und die Kapazität entsprechend eingestellt, so dass die selbe Lissajour-Figur wie im anderen Kreis zu sehen ist. 
+Als Resonanzfrequenz wird eine Frequenz von 
+\begin{equation}
+  \nu^+ = 35.46 kHz
+  \label{nu+}
+\end{equation}
+gemessen.
+
+\subsection{Frequenzverhältniss von Schwebung und Schwingung}
+
+Die dem experimentellen Aufbau entnommer Verhältniss aus Schwingungs- und Schwebungsfrequenz $n_\text{exp}$ ist in Tabelle \ref{tab:n} aufgeführt. Aus Formel \ref{eqn:??} und \ref{eqn:??}, lässt sich das theoretische Frequenzverhältniss berechnen.
+\begin{equation}
+  n_\text{t} = \frac{ v_\text{t}^+ + v_\text{t}^- }{2(v_\text{t}^- - v_\text{t}^+)}
+  \label{eqn:n_t}
+\end{equation}
+Die theoretischen Frequenzverhältnisse $n_\text{t}$ für die einzelnen Kondensatoren sind in Tabelle \ref{tab:n} aufgetragen. Die Abweichung des praktisch ermittelten Wertes vom theoretischen berechnet sich aus 
+\begin{equation}
+  \sigma = \frac{| n_\text{exp} - n_\text{t} |}{n_\text{exp}}
+\end{equation}
+Ursachen für die Abweichungen vom Theoriewert werden in der Disskusion besprochen.
+\begin{table}
+  \centering
+  \begin{tabular}{c c c c}
+    \toprule
+    $C_\text{k}$ / nF & $n_\text{exp}$ & $n_\text{t}$ & $\sigma$ / \%	\\
+    \midrule
+    12.00	& 15	& 16.7	& 11.3	\\
+    9.99	& 13 	& 14.1	& 8.5	\\
+    8.18	& 11	& 11.7	& 6.4	\\
+    6.86	& 9	& 10.0	& 11.1	\\
+    4.74	& 7	& 7.2	& 2.9	\\
+    2.86	& 4	& 4.8	& 20	\\	
+    2.19	& 3 	& 3.9	& 30	\\
+    0.997	& /	& 2.3	& /	\\
+    \bottomrule
+  \end{tabular}
+  \caption{<+Caption text+>}
+  \label{tab:n}
+\end{table}
+\subsection{Eigenfrequenzen des Systems (Lissajour Figur)}
+Sowohl die experimentell ermittelten Werte $v_\text{e}^+$ und  $v_\text{e}^-$, als auch die Theoriewerte die sich nach Formel \ref{eqn:??} und \ref{eqn:??} berechnen sind in Tabelle \ref{tab:eigen} aufgeführt. Von diesen Werten wurde die Abweichung berechnet und ebenfalls in der Tabelle aufgeführt.
+\begin{table}
+  \centering
+  \begin{tabular}{c c c c c c c}
+    \toprule
+    $C_\text{k}$ / nF & $v_\text{e}^+$ / kHz & $v_\text{t}^+$ /kHz & $\sigma^+$ / \% & $v_\text{e}^-$ / kHz & $v_\text{t}^-$ /kHz & $\sigma^-$ / \%  \\
+    \midrule
+    \num{12.00 +- 0.06}	& 37.32	& \num{38.10 +- 0.01} & 2 & 35.37 & 35.88 & 2 \\
+    \num{9.99 +- 0.04}	& 38.28	& \num{38.52 +- 0.01} & 1 & 35.22 & 35.88 & 2 \\
+    \num{8.18 +- 0.04}	& 38.67 & \num{39.08 +- 0.01} & 1 & 35.22 & 35.88 & 2 \\
+    \num{6.86 +- 0.03}	& 39.06 & \num{39.66 +- 0.02} & 2 & 35.22 & 35.88 & 2 \\
+    \num{4.74 +- 0.02}	& 40.53 & \num{41.22 +- 0.02} & 2 & 35.22 & 35.88 & 2 \\
+    \num{2.86 +- 0.01}	& 43.59 & \num{44.33 +- 0.03} & 2 & 35.22 & 35.88 & 2 \\
+    \num{2.19 +- 0.01}	& 46.02 & \num{46.55 +- 0.04} & 1 & 35.22 & 35.88 & 2 \\
+    \num{0.997 +- 0.005}	& 55.86 & \num{56.25 +- 0.08} & 1 & 35.22 & 35.88 & 2 \\
+    \bottomrule
+  \end{tabular}
+  \caption{<+Caption text+>}
+  \label{tab:eigen}
+\end{table}
+Eine Einordung der Messunsicherheiten erfolgt in der Disskussion.
+\subsection{Eigenfrequenzen des Systems (Beepmethode)}
+Die gewählte Startfrequenz des Beeps beträgt 
+\begin{equation}
+  \nu_\text{Start} = 30.13 \text{kHz}
+\end{equation} 
+und die Endfrequenz 
+\begin{equation}
+  \nu_\text{Ende} = 60.98 \text{kHz}
+\end{equation}
+Aufgrund des nicht immer eindeutigen Maxima wird ein Ablesefehler der Zeit von 2 ms berücksichtigt. Aus Formel \ref{eqn:??} lässt sich die gemessene Zeit, in die entsprechende Frequenz umrechenen. Die Ergebnisse sind in Tabelle \ref{tab:beep} aufgelistet, ebenso wie die Zeiten vom Start der Messung bis zum Peak und die Fehler der praktisch ermittelten Fehler zum theoretischen Wert.
+\begin{table}
+  \centering
+  \begin{tabular}{c c c c c c c}
+    \toprule
+    $C_\text{k}$ / nF & t bis zum & $v_\text{e}^+$ / kHz & $\sigma^+$ / \% & t bis zum & $v_\text{e}^-$ / kHz & $\sigma^-$ / \%  \\
+    &1 Peak /ms& & & 2 Peak / ms & & \\
+    \midrule
+    \num{12.00 +- 0.06}     & \num{240 +- 2} &\num{37.53 +- 0.06} & 2 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
+    \num{9.99 +- 0.04}      & \num{256 +- 2} &\num{38.02 +- 0.06} & 1 & \num{168 +- 2} & \num{35.30 +- 0.06} & 2 \\
+    \num{8.18 +- 0.04}      & \num{264 +- 2} &\num{38.27 +- 0.06} & 2 & \num{160 +- 2} & \num{35.06 +- 0.06} & 2 \\
+    \num{6.86 +- 0.03}      & \num{312 +- 2} &\num{39.75 +- 0.06} & 1 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
+    \num{4.74 +- 0.02}      & \num{328 +- 2} &\num{40.24 +- 0.06} & 2 & \num{160 +- 2} & \num{35.06 +- 0.06} & 2 \\
+    \num{2.86 +- 0.01}      & \num{432 +- 2} &\num{43.45 +- 0.06} & 2 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
+    \num{2.19 +- 0.01}      & \num{512 +- 2} &\num{45.92 +- 0.06} & 1 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
+    \num{0.997 +- 0.005}    & \num{816 +- 2} &\num{55.30 +- 0.06} & 2 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
+    \bottomrule
+  \end{tabular}
+  \caption{<+Caption text+>}
+  \label{tab:beep}
+\end{table}
 
