--- a/11-19.Januar/content/auswertung.tex
+++ b/11-19.Januar/content/auswertung.tex
@@ -29,7 +29,6 @@ Die theoretischen Frequenzverhältnisse $n_\text{t}$ für die einzelnen Kondensa
 \begin{equation}
   \sigma = \frac{| n_\text{exp} - n_\text{t} |}{n_\text{exp}}
 \end{equation}
-Ursachen für die Abweichungen vom Theoriewert werden in der Disskusion besprochen.
 \begin{table}
   \centering
   \begin{tabular}{c c c c}
@@ -46,9 +45,10 @@ Ursachen für die Abweichungen vom Theoriewert werden in der Disskusion besproch
     0.997	& /	& 2.3	& /	\\
     \bottomrule
   \end{tabular}
-  \caption{<+Caption text+>}
+  \caption{Frequenzverhältniss der verschiedenen Koppelkondensatoren}
   \label{tab:n}
 \end{table}
+Ursachen für die Abweichungen vom Theoriewert liegen einerseits dran, dass immer nur die Maxima eine einzige Schwebung gezählt wurden. Ein Verbesserungspotential besteht darin, mehrere Schwingungen zu betrachten und den Wert anschließend zu mitteln.
 \subsection{Eigenfrequenzen des Systems (Lissajour Figur)}
 Sowohl die experimentell ermittelten Werte $v_\text{e}^+$ und  $v_\text{e}^-$, als auch die Theoriewerte die sich nach Formel \ref{eqn:??} und \ref{eqn:??} berechnen sind in Tabelle \ref{tab:eigen} aufgeführt. Von diesen Werten wurde die Abweichung berechnet und ebenfalls in der Tabelle aufgeführt.
 \begin{table}
@@ -67,10 +67,10 @@ Sowohl die experimentell ermittelten Werte $v_\text{e}^+$ und  $v_\text{e}^-$, a
     \num{0.997 +- 0.005}	& 55.86 & \num{56.25 +- 0.08} & 1 & 35.22 & 35.88 & 2 \\
     \bottomrule
   \end{tabular}
-  \caption{<+Caption text+>}
+  \caption{Eigenfrequenzen der Schwingkreise in Abhängigkeit der Koppelkondensatoren}
   \label{tab:eigen}
 \end{table}
-Eine Einordung der Messunsicherheiten erfolgt in der Disskussion.
+Der Fehler der gemessenen Eigenschwingung sowohl für $\nu^+$ als auch $\nu^-$ ist 1-2 \%. Aufgrund der geringen relativen Abweichung können keine systematischen Fehler erkannt werden. 
 \subsection{Eigenfrequenzen des Systems (Beepmethode)}
 Die gewählte Startfrequenz des Beeps beträgt 
 \begin{equation}
@@ -101,4 +101,4 @@ Aufgrund des nicht immer eindeutigen Maxima wird ein Ablesefehler der Zeit von 2
   \caption{<+Caption text+>}
   \label{tab:beep}
 \end{table}
-
+Auffällig ist auch das diese Messung einen fürs Praktikum relativ geringe Messunsicherheit von \le 2 \% aufweist. Daher kann die Messung als gelungen bezeichnet werden.
