--- a/11-19.Januar/content/diskussion.tex
+++ b/11-19.Januar/content/diskussion.tex
@@ -1,2 +1,3 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Ein Vergleich zwischen den beiden Messmethoden ist schwierig, da beide ungefähr gleich genau sind. Lediglich der Aufwand ist nach subjektiver Beurteilung, bei einer längeren Messreihe bei der Sweepmethode kleiner, da nicht jedes mal die entsprechende Lissajourfigur gesucht werden muss. Ein Nachteil ist jedoch, dass das grobe Frequenzspektrum schon bekannt seien muss. Desweiteren muss ein Frequenzgenerator vorhaben seien welche solche Swipes generieren kann. Für die Methode mit den Lissajourfiguren ist dies nicht von Nöten und es reicht lediglich ein Funktionsgenerator und ein Zwei-Kanal-Oszilloskop.
