--- a/00-Vorlage/lit.bib
+++ b/00-Vorlage/lit.bib
@@ -1,5 +1,6 @@
 @manual{sample,
   author = {TU Dortmund},
   title = {Versuch zum Literaturverzeichnis},
-  year = 2014
+  year = 2014,
+  address = {Link einfügen},
 }
